Bug 1255394 - Restrictions: Fix java package. r=sebastian

MozReview-Commit-ID: XzS7bSaXhW